Add a header and main content

--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="top-container">
+        <header class="logo">Header Logo</header>
+
+        <ul class="links">
+            <li class="one">header link one</li>
+            <li class="two">header link two</li>
+            <li class="three">header link three</li>
+        </ul>
+    </div>
+
+    <div class="first-page">
+        <div class="main">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller fond and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="image">
+            <img src="#" alt="placeholder">
+        </div>
+    </div>
+
+    <div class="second-page">
+
+    </div>
 </body>
 </html>
