--- a/index.html
+++ b/index.html
@@ -27,9 +27,43 @@
             <img src="#" alt="placeholder">
         </div>
     </div>
+    
+    <h2 class="random">Some random information.</h2>
 
     <div class="second-page">
-
+        <div>
+            <img src="#" alt="image-one">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <img src="#" alt="image-two">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <img src="#" alt="image-three">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <img src="#" alt="image-four">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
     </div>
+
+    <div class="third-page">
+        <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+
+    <div class="fourth-page">
+        <div class="square">
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+
+    <div class="bot-footer">
+        <footer class="">Copyright The Odin Project 2025</footer>
+    </div>    
 </body>
 </html>
