--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="third-page">
         <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="thor">-Thor, God of Thunder</p>
     </div>
 
     <div class="fourth-page">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="bot-footer">
-        <footer class="">Copyright The Odin Project 2025</footer>
+        <footer class="feet">Copyright The Odin Project 2025</footer>
     </div>    
 </body>
 </html>
