Add images/ with pngs and modify index and style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="top-container">
-        <header class="logo">Header Logo</header>
+        <header class="logo"><img src="./images/logo_mhs.png" alt="monster hunter"></header>
 
         <ul class="links">
             <li class="one">header link one</li>
@@ -31,20 +31,20 @@
     <h2 class="random">Some random information.</h2>
 
     <div class="second-page">
-        <div>
-            <img src="#" alt="image-one">
+        <div class="info">
+            <img src="./images/deviljho.png" alt="deviljho">
             <p>this is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="#" alt="image-two">
+        <div class="info">
+            <img src="./images/tigrex.png" alt="tigrex">
             <p>this is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="#" alt="image-three">
+        <div class="info">
+            <img src="./images/brachydios.png" alt="brachydios">
             <p>this is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="#" alt="image-four">
+        <div class="info">
+            <img src="./images/zamtrios.png" alt="zamtrios">
             <p>this is some subtext under an illustration or image</p>
         </div>
     </div>
@@ -57,9 +57,11 @@
     <div class="fourth-page">
         <div class="square">
             <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="butt">
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <button>Sign up</button>  
+            </div>    
         </div>
-        <button>Sign up</button>
     </div>
 
     <div class="bot-footer">
