Add nergi.jpg and modify index and style

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <div class="first-page">
         <div class="main">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller fond and the color is lower contrast</p>
+            <h1>Monster Hunter</h1>
+            <p>The player takes the role of a Hunter, slaying or trapping large monsters across various landscapes as part of quests given to them by the guild.</p>
             <button>Sign up</button>
         </div>
         <div class="image">
-            <img src="#" alt="placeholder">
+            <img src="./images/nergi.jpg" alt="nergigante wallpaper">
         </div>
     </div>
     
@@ -33,19 +33,19 @@
     <div class="second-page">
         <div class="info">
             <img src="./images/deviljho.png" alt="deviljho">
-            <p>this is some subtext under an illustration or image</p>
+            <p>Deviljho is a large, green, bipedal Brute Wyvern known for its immense physical strength and aggression.</p>
         </div>
         <div class="info">
             <img src="./images/tigrex.png" alt="tigrex">
-            <p>this is some subtext under an illustration or image</p>
+            <p>Tigrex is a ferocious Flying Wyvern from the Monster Hunter series, known for its physical strength, speed, and deafening roar.</p>
         </div>
         <div class="info">
             <img src="./images/brachydios.png" alt="brachydios">
-            <p>this is some subtext under an illustration or image</p>
+            <p>Brachydios is a Brute Wyvern known for its explosive slime and powerful punches, which it uses to defeat prey.</p>
         </div>
         <div class="info">
             <img src="./images/zamtrios.png" alt="zamtrios">
-            <p>this is some subtext under an illustration or image</p>
+            <p>Zamtrios is known for its ability to generate a thick, icy armor on its body and its aquatic, predatory fighting style.</p>
         </div>
     </div>
 
