Modify index and style margins and header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header class="logo"><img src="./images/logo_mhs.png" alt="monster hunter"></header>
 
         <ul class="links">
-            <li class="one">header link one</li>
-            <li class="two">header link two</li>
-            <li class="three">header link three</li>
+            <li class="one">Home</li>
+            <li class="two">About</li>
+            <li class="three">Showcase</li>
         </ul>
     </div>
 
@@ -28,29 +28,29 @@
         </div>
     </div>
     
-    <h2 class="random">Some random information.</h2>
+    <h2 class="random">Monsters</h2>
 
     <div class="second-page">
         <div class="info">
             <img src="./images/deviljho.png" alt="deviljho">
-            <p>Deviljho is a large, green, bipedal Brute Wyvern known for its immense physical strength and aggression.</p>
+            <p><strong>Deviljho</strong> is a large, green, bipedal Brute Wyvern known for its immense physical strength and aggression.</p>
         </div>
         <div class="info">
             <img src="./images/tigrex.png" alt="tigrex">
-            <p>Tigrex is a ferocious Flying Wyvern from the Monster Hunter series, known for its physical strength, speed, and deafening roar.</p>
+            <p><strong>Tigrex</strong> is a ferocious Flying Wyvern from the Monster Hunter series, known for its physical strength, speed, and deafening roar.</p>
         </div>
         <div class="info">
             <img src="./images/brachydios.png" alt="brachydios">
-            <p>Brachydios is a Brute Wyvern known for its explosive slime and powerful punches, which it uses to defeat prey.</p>
+            <p><strong>Brachydios</strong> is a Brute Wyvern known for its explosive slime and powerful punches, which it uses to defeat prey.</p>
         </div>
         <div class="info">
             <img src="./images/zamtrios.png" alt="zamtrios">
-            <p>Zamtrios is known for its ability to generate a thick, icy armor on its body and its aquatic, predatory fighting style.</p>
+            <p><strong>Zamtrios</strong> is known for its ability to generate a thick, icy armor on its body and its aquatic, predatory fighting style.</p>
         </div>
     </div>
 
     <div class="third-page">
-        <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p><em>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</em></p>
         <p class="thor">-Thor, God of Thunder</p>
     </div>
 
@@ -59,7 +59,7 @@
             <p>Call to action! It's time!</p>
             <div class="butt">
                 <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign up</button>  
+                <button>Play</button>  
             </div>    
         </div>
     </div>
