Modify index and style and fail to fix background width issues

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
         <div class="fourth-page">
             <div class="square">
-                <p>Call to action! It's time!</p>
+                <p>Call to hunt! It's time!</p>
                 <div class="butt">
-                    <p>Play our game by clicking that button right over there!</p>
+                    <p>Play Monster Hunter by clicking that button right over there!</p>
                     <button>Play</button>  
                 </div>    
             </div>
