Finish landing page and will add more improvements once i git gud

--- a/index.html
+++ b/index.html
@@ -7,73 +7,96 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="top-container">
-            <header class="logo"><img src="./images/logo_mhs.png" alt="monster hunter"></header>
+    <div class="color">
+        <div class="container">
+            <div class="top-container">
+                <header class="logo"><img src="./images/logo_mhs.png" alt="monster hunter"></header>
 
-            <ul class="links">
-                <li class="one">
-                    <a href="#">Home</a>
-                </li>
-                <li class="two">
-                    <a href="#">About</a>
-                </li>
-                <li class="three">
-                    <a href="#">Showcase</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="first-page">
-            <div class="main">
-                <h1>Monster Hunter</h1>
-                <p>The player takes the role of a Hunter, slaying or trapping large monsters across various landscapes as part of quests given to them by the guild.</p>
-                <button>Sign up</button>
-            </div>
-            <div class="image">
-                <img src="./images/nergi.jpg" alt="nergigante wallpaper">
+                <ul class="links">
+                    <li class="one">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="two">
+                        <a href="#">Monsters</a>
+                    </li>
+                    <li class="three">
+                        <a href="#">Play</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        
-        <h2 class="random">Monsters</h2>
+    </div>
+    <div class="color">
+        <div class="container">
+            <div class="first-page">
+                <div class="main">
+                    <h1>Monster Hunter</h1>
+                    <p>The player takes the role of a Hunter, slaying or trapping large monsters across various landscapes as part of quests given to them by the guild.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="image">
+                    <img src="./images/nergi.jpg" alt="nergigante wallpaper">
+                </div>
+            </div>
+         </div>
+    </div> 
 
-        <div class="second-page">
-            <div class="info">
-                <img src="./images/deviljho.png" alt="deviljho">
-                <p><strong>Deviljho</strong> is a large, green, bipedal Brute Wyvern known for its immense physical strength and aggression.</p>
-            </div>
-            <div class="info">
-                <img src="./images/tigrex.png" alt="tigrex">
-                <p><strong>Tigrex</strong> is a ferocious Flying Wyvern from the Monster Hunter series, known for its physical strength, speed, and deafening roar.</p>
-            </div>
-            <div class="info">
-                <img src="./images/brachydios.png" alt="brachydios">
-                <p><strong>Brachydios</strong> is a Brute Wyvern known for its explosive slime and powerful punches, which it uses to defeat prey.</p>
-            </div>
-            <div class="info">
-                <img src="./images/zamtrios.png" alt="zamtrios">
-                <p><strong>Zamtrios</strong> is known for its ability to generate a thick, icy armor on its body and its aquatic, predatory fighting style.</p>
+    <div class="container">        
+    <h2 class="random">Monsters</h2>
+    </div>
+
+    <div class="no-color">
+        <div class="container">
+            <div class="second-page">
+                <div class="info">
+                    <img src="./images/deviljho.png" alt="deviljho">
+                    <p><strong>Deviljho</strong> is a large, green, bipedal Brute Wyvern known for its immense physical strength and aggression.</p>
+                </div>
+                <div class="info">
+                    <img src="./images/tigrex.png" alt="tigrex">
+                    <p><strong>Tigrex</strong> is a ferocious Flying Wyvern from the Monster Hunter series, known for its physical strength, speed, and deafening roar.</p>
+                </div>
+                <div class="info">
+                    <img src="./images/brachydios.png" alt="brachydios">
+                    <p><strong>Brachydios</strong> is a Brute Wyvern known for its explosive slime and powerful punches, which it uses to defeat prey.</p>
+                </div>
+                <div class="info">
+                    <img src="./images/zamtrios.png" alt="zamtrios">
+                    <p><strong>Zamtrios</strong> is known for its ability to generate a thick, icy armor on its body and its aquatic, predatory fighting style.</p>
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="third-page">
-            <p><em>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</em></p>
-            <p class="thor">-Thor, God of Thunder</p>
-        </div>
-
-        <div class="fourth-page">
-            <div class="square">
-                <p>Call to hunt! It's time!</p>
-                <div class="butt">
-                    <p>Play Monster Hunter by clicking that button right over there!</p>
-                    <button>Play</button>  
-                </div>    
+    <div class="gray-color">
+        <div class="container">
+            <div class="third-page">
+                <p><em>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</em></p>
+                <p class="thor">-Thor, God of Thunder</p>
             </div>
         </div>
+    </div>
 
-        <div class="bot-footer">
-            <footer class="feet">Copyright The Odin Project 2025</footer>
+    <div class="no-color">
+        <div class="container">
+            <div class="fourth-page">
+                <div class="square">
+                    <p>Call to hunt! It's time!</p>
+                    <div class="butt">
+                        <p>Play Monster Hunter by clicking that button right over there!</p>
+                        <button>Play</button>  
+                    </div>    
+                </div>
+            </div>
         </div>
-    </div>        
+    </div>
+
+    <div class="color">
+        <div class="container">
+            <div class="bot-footer">
+                <footer class="feet">Copyright The Odin Project 2025</footer>
+            </div> 
+        </div>
+    </div>              
 </body>
 </html>
